2011-07-20  Cris Neckar  <cdn@chromium.org>

        Hook v8 up to cryptographicallyRandomValues as an entropy source.
        https://bugs.webkit.org/show_bug.cgi?id=64887

        Reviewed by Adam Barth.

        * src/WebKit.cpp:
        (WebKit::generateEntropy):
        (WebKit::initialize):

2011-07-21  Vsevolod Vlasov  <vsevik@chromium.org>

        [Chromium DevTools] Remove unused method setAgentIdentifierPrefix from WebDevToolAgent.
        https://bugs.webkit.org/show_bug.cgi?id=64793

        Reviewed by Pavel Feldman.

        * public/WebDevToolsAgent.h:
        * src/WebDevToolsAgentImpl.cpp:
        * src/WebDevToolsAgentImpl.h:

2011-07-21  Ryosuke Niwa  <rniwa@webkit.org>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2011-07-20  Al Patrick  <apatrick@chromium.org>

        Set the parent context to that of the associated view when calling GraphicsContext3DChromium::copyTextureToParentCHROMIUM.
        This fixes a race condition whereby the view window does not exist when the offscreen context is created. It allows
        accelerated 2D canvases to be added to newly created window.
        https://bugs.webkit.org/show_bug.cgi?id=64905

        Reviewed by James Robinson.

        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3DInternal::copyTextureToParentTextureCHROMIUM):

2011-07-19  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Add support for disabling cache in web inspector.
        https://bugs.webkit.org/show_bug.cgi?id=64097

        Reviewed by Pavel Feldman.

        * src/InspectorClientImpl.cpp:
        (WebKit::InspectorClientImpl::setCacheDisabled):
        * src/InspectorClientImpl.h:
        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::setCacheDisabled):
        * src/WebDevToolsAgentImpl.h:
        * src/js/DevTools.js:
        ():

2011-07-20  Peter Kasting  <pkasting@google.com>

        Remove "const" from obviously-non-const accessors